Different fixes or improvements

--- a/pages/webcardinal/attributes/data-for.html
+++ b/pages/webcardinal/attributes/data-for.html
@@ -32,7 +32,7 @@
     <psk-description title="Summary">
         <p>This attribute is used to render multiple form sections or components based on a template and a model.</p>
         <p>
-            The model is declared in the form controller and this will be responsible for two-way binding. The model
+            The model is declared in the controller and this will be responsible for two-way binding. The model
             should be written as a JavaScript array.
         </p>
         <p>
@@ -44,7 +44,7 @@
             information from the model.
         </p>
 
-        <p>The general use of <code>webc-if</code> is the following:</p>
+        <p>The general use of <code>data-for</code> is the following:</p>
         <!-- prettier-ignore -->
         <psk-code language="markup">
                 <div data-for="@array">
