--- a/pages/webcardinal/cheatsheet.html
+++ b/pages/webcardinal/cheatsheet.html
@@ -5,6 +5,7 @@
         --cardinal-core-color: #d2ab63;
         --cardinal-essentials-color: #369b4d;
         --cardinal-wiki-color: #7f4c91;
+        --cardinal-forms-color: #4dd0e1;
     }
 </style>
 <link rel="stylesheet" href="/assets/css/pages/cheatsheet.css">
