--- a/pages/webcardinal/forms.html
+++ b/pages/webcardinal/forms.html
@@ -15,7 +15,7 @@
     <!-- End Google Tag Manager -->
 </head>
 
-<psk-page title="Translations">
+<psk-page title="Forms">
     <!-- Google Tag Manager (noscript) -->
     <noscript
         ><iframe
